development/monitoring/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-svc
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    component: kibana-dep
  ports:
    - port: 5601
      targetPort: 5601
