development/monitoring/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dep-kibana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: kibana-dashboard.alan.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-svc
                port:
                  number: 5601
